# SE_structures

./: README.md
AVL/: CMakeLists.txt  avltree.h  mm.h  test  test.cpp
Hash/: CMakeLists.txt  hash.h  hash_test.cpp  mm.h
List/: CMakeLists.txt  list.h  testDL.cpp  testDL.cpp.orig  testSL.cpp  testSL.cpp.orig
List/test_lib/: doctest.h
Measuring/: CMakeLists.txt  avltree.h  hash.h  measure.cpp  sort.cpp
Measuring/results/: clear.csv  findAll.csv  findOther.csv  init.csv  pop.csv
Memory_manager/: CMakeLists.txt  CMakeLists.txt.orig  a.out  main.cpp  mm.h  mm.h.orig  template.h  test.cpp  test.cpp.orig
Sort/: CMakeLists.txt  a.out  doctest.h  main.cpp  sort.cpp  sort.h  sort_template.h  test.cpp
